Phase_1_Project_Liz

--- a/student.ipynb
+++ b/student.ipynb
@@ -9,9 +9,8 @@
     "Please fill out:\n",
     "* Student name: Elizabeth Gichure\n",
     "* Student pace: part-time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: Christine Kirimi\n",
-    "* Blog post URL:\n"
+    "* Scheduled project review date/time: 26th July 2025\n",
+    "* Instructor name: Christine Kirimi\n"
    ]
   },
   {
